--- a/index.html
+++ b/index.html
@@ -4,6 +4,38 @@
 <head>
   <base href="/">
 
+  <script>
+    function sessionStorageSet(key, value) {
+      try {
+        window.sessionStorage.setItem('__telegram__' + key, JSON.stringify(value));
+        return true;
+      } catch (e) {}
+      return false;
+    }
+  
+    function sessionStorageGet(key) {
+      try {
+        return JSON.parse(window.sessionStorage.getItem('__telegram__' + key));
+      } catch (e) {}
+      return null;
+    }
+  
+    var appTgVersion = 7.7;
+  
+    var initParams = sessionStorageGet('initParams');
+    if (initParams) {
+      if (!initParams.tgWebAppVersion) {
+        initParams.tgWebAppVersion = appTgVersion;
+      }
+    } else {
+      initParams = {
+        tgWebAppVersion: appTgVersion
+      };
+    }
+  
+    sessionStorageSet('initParams', initParams);
+  </script>
+
   <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
   
   <meta charset="UTF-8">
